<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ehri-project</groupId>
    <artifactId>ehri-data</artifactId>
    <version>0.13.10</version>
    <packaging>pom</packaging>

    <name>EHRI Backend</name>
    <description>An API and web service on top of the Blueprints graph database abstraction layer.</description>
    <url>https://github.com/EHRI</url>
    <organization>
        <name>The European Holocaust Research Infrastructure (EHRI)</name>
        <url>http://ehri-project.eu</url>
    </organization>

    <developers>
        <developer>
            <id>ben</id>
            <name>Ben Companjen</name>
            <email>ben DOT companjen AT dans.knaw.nl</email>
            <url>http://github.com/bencomp</url>
            <organization>Data Archiving and Networked Services (DANS)</organization>
            <organizationUrl>http://www.dans.knaw.nl</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>paul</id>
            <name>Paul Boon</name>
            <email>paul DOT boon AT dans.knaw.nl</email>
            <url>http://github.com/PaulBoon</url>
            <organization>Data Archiving and Networked Services (DANS)</organization>
            <organizationUrl>http://www.dans.knaw.nl</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>linda</id>
            <name>Linda Reijnhoudt</name>
            <email>linda DOT reijnhoudt AT dans.knaw.nl</email>
            <url>http://github.com/lindareijnhoudt</url>
            <organization>Data Archiving and Networked Services (DANS)</organization>
            <organizationUrl>http://www.dans.knaw.nl</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>mike</id>
            <name>Mike Bryant</name>
            <email>michael DOT bryant AT kcl.ac.uk</email>
            <url>http://github.com/mikesname</url>
            <organization>King's College London</organization>
            <organizationUrl>http://www.kcl.ac.uk/innovation/groups/cerch/index.aspx</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>0</timezone>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/EHRI/ehri-rest/issues</url>
    </issueManagement>

    <distributionManagement>
        <site>
            <id>ehri-rest-site</id>
            <name>Ehri Backend Site</name>
            <url>http://github.com/EHRI/ehri-rest</url>
        </site>
        <snapshotRepository>
            <id>ehridev</id>
            <name>libs-snapshot-local</name>
            <url>https://dev.ehri-project.eu/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
        <repository>
            <id>ehridev</id>
            <name>libs-release-local</name>
            <url>https://dev.ehri-project.eu/artifactory/libs-release-local</url>
        </repository>
    </distributionManagement>

    <scm>
        <connection>scm:git:git://github.com/EHRI/ehri-rest</connection>
        <url>https://github.com/EHRI/ehri-rest</url>
    </scm>

    <licenses>
        <license>
            <name>European Union Public Licence (EUPL) version 1.1</name>
            <url>https://joinup.ec.europa.eu/software/page/eupl/licence-eupl</url>
        </license>
    </licenses>

    <modules>
        <module>ehri-core</module>
        <module>ehri-ws</module>
        <module>ehri-io</module>
        <module>ehri-cli</module>
        <module>ehri-definitions</module>
        <module>ehri-cypher</module>
        <module>build</module>
        <module>ehri-ws-graphql</module>
        <module>ehri-ws-oaipmh</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Overridden by child poms we don't want to create a site for -->
        <maven-site-plugin.skip>false</maven-site-plugin.skip>

        <neo4j.version>3.2.3</neo4j.version>
        <blueprints.version>2.6.0</blueprints.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.4</version>
                <configuration>
                    <skip>${maven-site-plugin.skip}</skip>
                    <port>9001</port>
                    <tempWebappDirectory>${basedir}/target/site/tempdir</tempWebappDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <!-- The drastically speeds up the build by preventing 
                        it downloading info for every dependency -->
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.1</version>
                <configuration>
                    <!-- Since we host the docs on Git, the timestamp causes 
                        lots of unnecessary file changes. -->
                    <notimestamp>true</notimestamp>
                </configuration>
                <reportSets>
                    <reportSet>
                        <id>default</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                    <reportSet>
                        <id>aggregate</id>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                    <!-- Optional directory to put findbugs xdoc xml report -->
                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>false</failsOnError>
                    <linkXRef>true</linkXRef>
                    <failOnViolation>false</failOnViolation>
                    <outputFileFormat>xml</outputFileFormat>
                    <outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
                    <useFile>true</useFile>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
